--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -453,9 +453,13 @@ for \bonobo %
 species.tree <- 
     read.tree(text="(Monodelphis_domestica,((Dasypus_novemcinctus,Loxodonta_africana)Atlantogenata,((Canis_familiaris,(Equus_caballus,(Sus_scrofa,(Ovis_aries,Bos_taurus))))Laurasiatheria,(((Spalax_carmeli,Spalax_galili),Mus_Musculus)Rodentia,((Pan_paniscus,Homo_sapiens),Ateles_fuciceps)Primates)Euarchontoglires)Boreoeutheria)Eutheria);")
 pp <- ggtree(species.tree)+
-    geom_text(aes(label=gsub("_"," ",label)),hjust=0,size=5,fontface="italic")+
-    geom_text(data=data.frame(x=1,y=1),label="Metatheria",hjust=0,vjust=0,size=5,fontface="italic")+
-    scale_x_continuous(limits=c(0,10))
+    geom_text(aes(label=gsub("_"," ",label)),vjust=0.65,hjust=0,size=4,fontface="italic")+
+    geom_text(data=data.frame(x=1,y=1),label="Metatheria",hjust=0,vjust=0,size=4,fontface="italic")+
+    scale_x_continuous(limits=c(0,10))+
+    theme(legend.margin=unit(0,"mm"),
+          plot.margin=unit(c(0,0,0,0),"mm")
+          ) + ggplot2::xlim(0,9)
+
 print(pp %>%
       ## monodelphis
       phylopic("91324e57-b3f1-42e0-abe3-43e5bc8aa4c6", color="#86B875",alpha=0.3,node=1,width=0.2)
