there doesn't need to be an author counter

--- a/manuscript/elsarticle_dla.cls
+++ b/manuscript/elsarticle_dla.cls
@@ -189,7 +189,7 @@
 \def\pprinttitle{}
 \let\authorsep\@empty
 \let\sep\@empty
-\newcounter{author}
+%\newcounter{elsauthor}
 \def\author{\@ifnextchar[{\@@author}{\@author}}
 
 \newtoks\@eadauthor
