update clean references

--- a/manuscript/references_clean.bib
+++ b/manuscript/references_clean.bib
@@ -62,6 +62,19 @@
   YEAR = {2002},
 }
 
+@ARTICLE{Hou.ea2012:Elephanttranscriptomeprovidesinsights,
+  ABSTRACT = {The chorioallantoic placenta connects mother and fetus in eutherian pregnancies. In order to understand the evolution of the placenta and provide further understanding of placenta biology, we sequenced the transcriptome of a term placenta of an African elephant (Loxodonta africana) and compared these data with RNA sequence and microarray data from other eutherian placentas including human, mouse, and cow. We characterized the composition of 55,910 expressed sequence tag (i.e., cDNA) contigs using our custom annotation pipeline. A Markov algorithm was used to cluster orthologs of human, mouse, cow, and elephant placenta transcripts. We found 2,963 genes are commonly expressed in the placentas of these eutherian mammals. Gene ontology categories previously suggested to be important for placenta function (e.g., estrogen receptor signaling pathway, cell motion and migration, and adherens junctions) were significantly enriched in these eutherian placenta-expressed genes. Genes duplicated in different lineages and also specifically expressed in the placenta contribute to the great diversity observed in mammalian placenta anatomy. We identified 1,365 human lineage-specific, 1,235 mouse lineage-specific, 436 cow lineage-specific, and 904 elephant-specific placenta-expressed (PE) genes. The most enriched clusters of human-specific PE genes are signal/glycoprotein and immunoglobulin, and humans possess a deeply invasive human hemochorial placenta that comes into direct contact with maternal immune cells. Inference of phylogenetically conserved and derived transcripts demonstrates the power of comparative transcriptomics to trace placenta evolution and variation across mammals and identified candidate genes that may be important in the normal function of the human placenta, and their dysfunction may be related to human pregnancy complications.},
+  AUTHOR = {Zhuo-Cheng Hou and Kirstin N Sterner and Roberto Romero and Nandor Gabor Than and Juan M Gonzalez and Amy Weckle and Jun Xing and Kurt Benirschke and Morris Goodman and Derek E Wildman},
+  DOI = {10.1093/gbe/evs045},
+  JOURNALTITLE = {Genome Biol Evol},
+  NUMBER = {5},
+  PAGES = {713--725},
+  PMID = {22546564},
+  TITLE = {Elephant transcriptome provides insights into the evolution of eutherian placentation},
+  VOLUME = {4},
+  YEAR = {2012},
+}
+
 @ARTICLE{Green.ea2000:Pregnancy-associatedbovineandovine,
   ABSTRACT = {The pregnancy-associated glycoproteins (PAG) constitute a large family of recently duplicated genes. They show structural resemblance to pepsin and related aspartic proteinases. A total of 21 bovine (bo) PAG and 9 ovine (ov) PAG cDNA have been identified. Phylogenetic analysis indicated that the PAG are divided into two main groupings that accurately reflect their tissue expression, as determined by in situ hybridization. In the first pattern, represented by ovPAG-2 and boPAG-2, -8, -10, and -11 (where the numbering is arbitrary and reflects order of discovery within species), expression occurred throughout the outer epithelial layer of the placenta (trophectoderm). The second pattern was predominant localization to binucleate cells. Ribonuclease protection assays, which allow discrimination between closely related transcripts, have shown that the expression of PAG varies in a temporal manner over pregnancy. Of those bovine PAG expressed predominantly in binucleate cells, boPAG-1, -6, and -7 are expressed weakly, if at all, by Day 25 placenta, but are present at the middle and end of pregnancy. Others, such as boPAG-4, -5, and -9, are expressed at Day 25 and at earlier stages. Although not among the earliest PAG produced by the trophoblast, boPAG-1 has been used for pregnancy diagnosis, particularly in dairy cows, where there is a major need for a sensitive method capable of detecting pregnancy within 1 mo of conception. It seems likely that some of the newly discovered PAG will be better candidates than PAG-1 for pregnancy diagnosis.},
   AUTHOR = {J A Green and S Xie and X Quan and B Bao and X Gan and N Mathialagan and J F Beckers and R M Roberts},
@@ -419,20 +432,6 @@
   YEAR = {2014},
 }
 
-@ARTICLE{Xiang.ea2013:PromoterhypomethylationofTIMP3,
-  ABSTRACT = {A study by Yuen RK, Penaherrera MS, von Dadelszen P, McFadden DE, Robinson WP. DNA methylation profiling of human placentas reveals promoter hypomethylation of multiple genes in early-onset preeclampsia. Eur J Hum Genet 2010;18:1006-1012 based on a Canadian population found the tissue inhibitor of the metalloproteinase 3 (TIMP3) gene to be hypomethylated in pre-eclampsia (PE) placentas and to be a potential prenatal marker for early onset PE. To further explore the role of TIMP3 in PE and to investigate whether the TIMP3 promoter shows the same methylation pattern in the Han Chinese population, we analyzed a complete methylation assay of TIMP3 including the promoter region studied in the Canadian report and the neighboring CpG island in placentas (cases n = 41, controls n = 22) maternal peripheral blood (cases n = 3; controls n = 6) and umbilical cord blood (cases n = 7; controls n = 8) using MassArray EpiTyper (Sequenom, San Diego, CA, USA). Our results confirmed the finding of aberrant TIMP3 promoter methylation in PE placentas (mean = 0.405) compared with those in controls (mean = 0.534, P = 9.40 × 10(-7)). A tissue-specific methylation pattern between placentas (mean = 0.459) and bloods (mean = 0.961, P = 6.91 × 10(-13)) was also demonstrated in our clinical samples. Furthermore, a nearly 2-fold increase in TIMP3 expression for the hypomethylated promoter was found in PE placentas (P = 0.007), pointing to a negative relationship between TIMP3 methylation and the expression (R = -0.758, P = 0.029). In conclusion, we replicated the findings of Yuen et al. in our Han Chinese-based study, confirming that TIMP3 is likely to be involved in the etiology of PE and that hypomethylated and placenta-specific TIMP3 may be a potential marker for early diagnosis of PE in maternal plasma.},
-  AUTHOR = {Yuqian Xiang and Xiaojing Zhang and Qiaoli Li and Jiawei Xu and Xinyao Zhou and Teng Wang and Qinghe Xing and Yun Liu and Lei Wang and Lin He and Xinzhi Zhao},
-  DOI = {10.1093/molehr/gas054},
-  JOURNALTITLE = {Mol. Hum. Reprod.},
-  MONTH = {Mar},
-  NUMBER = {3},
-  PAGES = {153--159},
-  PMID = {23172037},
-  TITLE = {Promoter hypomethylation of TIMP3 is associated with pre-eclampsia in a Chinese population},
-  VOLUME = {19},
-  YEAR = {2013},
-}
-
 @ARTICLE{Ueki.ea2012:Lossofmaternalannexin,
   ABSTRACT = {Antiphospholipid syndrome is associated with an increased risk of thrombosis and pregnancy loss. Annexin A5 (Anxa5) is a candidate autoantigen. It is not known, however, whether endogenous Anxa5 prevents foetal loss during normal pregnancy. We found significant reductions in litter size and foetal weight in Anxa5-null mice (Anxa5-KO). These changes occurred even when only the mother was Anxa5-KO. A small amount of placental fibrin deposition was observed in the decidual tissues, but did not noticeably differ between wild-type and Anxa5-KO mice. However, immunoreactivity for integrin beta 3/CD61, a platelet marker, was demonstrated within thrombi in the arterial canals only in Anxa5-KO mothers. Subcutaneous administration of the anticoagulant heparin to pregnant Anxa5-KO mice significantly reduced pregnancy loss, suggesting that maternal Anxa5 is crucial for maintaining intact placental circulation. Hence, the presence of maternal Anxa5 minimises the risk of thrombosis in the placental circulation and reduces the risk of foetal loss.},
   AUTHOR = {Hiroshi Ueki and Tomona Mizushina and Titaree Laoharatchatathanin and Ryota Terashima and Yasuhiro Nishimura and Duangjai Rieanrakwong and Tomohiro Yonezawa and Shiro Kurusu and Yoshihisa Hasegawa and Bent Brachvogel and Ernst Pöschl and Mitsumori Kawaminami},
@@ -473,6 +472,20 @@
   YEAR = {2007},
 }
 
+@ARTICLE{Wildman.ea2006:Evolutionofmammalianplacenta,
+  ABSTRACT = {The placenta is essential for the success of therian mammalian reproduction. Intense selective pressure has shaped changes in placental anatomy and function during mammalian cladogenesis. Here we challenge the view that the hemochorial placenta is a derived feature in haplorhine primates. Using phylogenetic and statistical analyses of molecular and morphological data, we demonstrate that the ancestral eutherian mammalian placenta had the distinctive features of (i) hemochorial placental interface, (ii) a discoid shape, and (iii) a labyrinthine maternofetal interdigitation. These results reveal that the first eutherians had a deeply invasive placenta and imply that the major role of the placenta in sustaining pregnancy and promoting gestational development existed throughout the eutherian lineage that descended to humans from the last common ancestor of placental mammals. The ancestral state reconstructions demonstrate both clade-specific patterns of placentation and specific cases of convergent evolution within individual eutherian clades. Determining the mammalian pattern of change in placental morphology is important for understanding the evolutionary pressures faced by these lineages. The effects of selection pressures on the efficiency of placentation may stem from changes in nutritional demand, gestational length, number of embryos per pregnancy, uterine shape, and maternal body constitution. The influence of these factors on placental development needs further investigation.},
+  AUTHOR = {Derek E Wildman and Caoyi Chen and Offer Erez and Lawrence I Grossman and Morris Goodman and Roberto Romero},
+  DOI = {10.1073/pnas.0511344103},
+  JOURNALTITLE = {Proc. Natl. Acad. Sci. U.S.A.},
+  MONTH = {Feb},
+  NUMBER = {9},
+  PAGES = {3203--3208},
+  PMID = {16492730},
+  TITLE = {Evolution of the mammalian placenta revealed by phylogenetic analysis},
+  VOLUME = {103},
+  YEAR = {2006},
+}
+
 @ARTICLE{Carter.ea2011:Evolutionofinvasiveplacentation,
   ABSTRACT = {It is now possible to view human placentation in an evolutionary context because advances in molecular phylogenetics provide a reliable scenario for the evolution of mammals. Perhaps the most striking finding is the uniqueness of human placenta. The lower primates have non-invasive placentae and even tarsiers and New World monkeys show restricted trophoblast invasion. Moreover, a truly villous placenta occurs only in Old World monkeys and great apes. The two latter groups of haplorhine primates show varying degrees of trophoblast-uterine interaction, including differences in the extent of decidualization, formation and disintegration of a cytotrophoblastic shell, degree of interstitial trophoblast invasion and depth of trophoblast invasion into spiral arteries. Recently, the occurrence of human-like deep invasion was confirmed in gorillas and chimpanzees. As the still enigmatic disease of pre-eclampsia also occurs in these species, such information may reveal the evolutionary roots of this disease of impaired maternal-fetal interaction.},
   AUTHOR = {Anthony M Carter and Robert Pijnenborg},
@@ -485,19 +498,6 @@
   TITLE = {Evolution of invasive placentation with special reference to non-human primates},
   VOLUME = {25},
   YEAR = {2011},
-}
-
-@ARTICLE{Robillard.ea2002:Evolutionaryadaptationstopre-eclampsiaeclampsia,
-  ABSTRACT = {Gestational-hypertension/pre-eclampsia occurs in approximately 10\% of human pregnancies. This persistent complication of pregnancy has been reported to occur more frequently in couples conceiving very shortly after the beginning of their sexual relationship and/or after a change in paternity. Primipaternity may be the leading cause of pre-eclampsia in women under 30 years of age when genetic susceptibility to cardio-vascular disease has not yet been expressed, especially in women before their twenties, who for the last 40,000 years have perhaps comprised the age group when the majority of parturients classified as Homo sapiens sapiens initiated their reproductive life. In terms of evolution, the prevalence of pre-eclampsia represents a distinct reproductive disadvantage in humans as compared with other mammals. Indeed, pre-eclampsia is a consequence of the defect of the normal human-specific deep endovascular invasion of the trophoblast. The large size of the human fetal brain imposing this deep trophoblastic invasion induced the need for major immunogenetic compromises in terms of paternal-maternal tissue tolerance. The price that mankind has had to pay to adapt to the pre-eclampsia risk is a low fecundability rate and therefore loss of oestrus, possibly a step in the deviation between apes and hominids. Further, pre-eclampsia risk may be a contributing factor leading to the rejection of systematic polyandry in human societies and have influenced prohibition of incest.},
-  AUTHOR = {Pierre-Yves Robillard and Gustaaf A Dekker and Thomas C Hulsey},
-  JOURNALTITLE = {Am. J. Reprod. Immunol.},
-  MONTH = {Feb},
-  NUMBER = {2},
-  PAGES = {104--111},
-  PMID = {11900595},
-  TITLE = {Evolutionary adaptations to pre-eclampsia/eclampsia in humans: low fecundability rate, loss of oestrus, prohibitions of incest and systematic polyandry},
-  VOLUME = {47},
-  YEAR = {2002},
 }
 
 @ARTICLE{Chaiworapongsa.ea2014:Pre-eclampsiapart1current,
@@ -553,6 +553,20 @@
   TITLE = {Annexin-A5 promotes membrane resealing in human trophoblasts},
   VOLUME = {1853},
   YEAR = {2015},
+}
+
+@ARTICLE{Poeter.ea2013:DisruptionofannexinA1S100A11,
+  ABSTRACT = {Endocytosis of activated growth factor receptors regulates spatio-temporal cellular signaling. In the case of the EGF receptor, sorting into multivesicular bodies (MVBs) controls signal termination and subsequently leads to receptor degradation in lysosomes. Annexin A1, a Ca(2+)-regulated membrane binding protein often deregulated in human cancers, interacts with the EGF receptor and is phosphorylated by internalized EGF receptor on endosomes. Most relevant for EGF receptor signal termination, annexin A1 is required for the formation of internal vesicles in MVBs that sequester ligand-bound EGF receptor away from the limiting membrane. To elucidate the mechanism underlying annexin A1-dependent EGF receptor trafficking we employed an N-terminally truncated annexin A1 mutant that lacks the EGF receptor phosphorylation site and the site for interaction with its protein ligand S100A11. Overexpression of this dominant-negative mutant induces a delay in EGF-induced EGF receptor transport to the LAMP1-positive late endosomal/lysosomal compartment and impairs ligand-induced EGF receptor degradation. Consistent with these findings, EGF-stimulated EGF receptor and MAP kinase pathway signaling is prolonged. Importantly, depletion of S100A11 also results in a delayed EGF receptor transport and prolonged MAP kinase signaling comparable to the trafficking defect observed in cells expressing the N-terminally truncated annexin A1 mutant. These results strongly suggest that the function of annexin A1 as a regulator of EGF receptor trafficking, degradation and signaling is critically mediated through an N-terminal interaction with S100A11 in the endosomal compartment. This interaction appears to be essential for lysosomal targeting of the EGF receptor, possibly by providing a physical scaffold supporting inward vesiculation in MVBs. This article is part of a Special Issue entitled: 12th European Symposium on Calcium.},
+  AUTHOR = {Michaela Poeter and Susanne Radke and Meryem Koese and Florian Hessner and Anika Hegemann and Agnes Musiol and Volker Gerke and Thomas Grewal and Ursula Rescher},
+  DOI = {10.1016/j.bbamcr.2012.12.006},
+  JOURNALTITLE = {Biochim. Biophys. Acta},
+  MONTH = {Jul},
+  NUMBER = {7},
+  PAGES = {1700--1711},
+  PMID = {23246849},
+  TITLE = {Disruption of the annexin A1/S100A11 complex increases the migration and clonogenic growth by dysregulating epithelial growth factor (EGF) signaling},
+  VOLUME = {1833},
+  YEAR = {2013},
 }
 
 @ARTICLE{Armant.ea2015:Reducedexpressionofepidermal,
