--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -227,6 +227,7 @@ placpath <- function(pathway,database) {
 \author[affigb,affapetrust,affmip]{Derek E. Wildman\corref{cor1}}
 \ead{wildmand@illinois.edu}
 \cortext[cor1]{Corresponding author}
+\fntext[n1]{Equal contributor}
 \address[affigb]{Institute for Genomic Biology, University of Illinois at Urbana-Champaign, Urbana, IL, USA}
 \address[afflon]{School of Biological and Chemical Sciences, Queen Mary, University of London, London, UK}
 \address[affwayne]{Center for Molecular Medicine and Genetics, Wayne State University School of Medicine, Detroit, MI, USA}
